# flowforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOVER.md  Makefile  README.md  llm.txt  pyproject.toml
python/flowforge-audit-pg/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-audit-pg/src/flowforge_audit_pg/: __init__.py  _golden.py  analytics.py  hash_chain.py  sink.py
python/flowforge-audit-pg/tests/: test_analytics.py  test_golden.py  test_hash_chain.py  test_migration.py  test_sink.py
python/flowforge-cli/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-cli/src/flowforge_cli/: __init__.py  _io.py  _ux.py  llmtxt.py  main.py
python/flowforge-cli/tests/: conftest.py  test_E_57_acceptance.py  test_analytics_taxonomy.py  test_audit_2026_health.py  test_audit_verify.py  test_bundle_diff.py  test_cli_ux.py  test_design_tokens.py  test_form_renderer_flag.py  test_frontend_admin_generator.py  test_frontend_cli_generator.py  test_frontend_email_generator.py  test_frontend_slack_generator.py  test_i18n_generator.py  test_io_and_ai_assist.py  test_jtbd_compensation_synthesis.py  test_jtbd_conflicts.py  test_jtbd_desktop_app_helpers.py  test_jtbd_desktop_document.py  test_jtbd_diagram_generator.py  test_jtbd_fixture_registry.py  test_jtbd_fork.py  test_jtbd_generators.py  test_jtbd_idempotency.py  test_jtbd_lint_adapter.py  test_jtbd_lint_cmd.py  test_jtbd_migrate_cmd.py  test_jtbd_parse.py  test_jtbd_render.py  test_jtbd_seed_data.py  test_jtbd_transforms.py  test_lineage_generator.py  test_llmtxt.py  test_migration_safety_cli.py  test_migration_safety_generator.py  test_new_scaffold.py  test_openapi_generator.py  test_operator_manual_generator.py  test_other_commands.py  test_polish_copy.py  (+11 more)
python/flowforge-connectors/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-connectors/src/flowforge_connectors/: __init__.py  base.py  github.py  http.py  hubspot.py  kafka.py  postgres.py  redis_conn.py  s3.py  slack.py  smtp.py  sqs.py  stripe.py  twilio.py
python/flowforge-connectors/tests/: conftest.py  test_connectors.py  test_triggers.py
python/flowforge-core/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-core/src/flowforge/: __init__.py  _uuid7.py  config.py  version.py
python/flowforge-core/tests/: test_engine_helper_modules.py
python/flowforge-core/tests/unit/: test_E_61_acceptance.py  test_config_and_fakes_contracts.py  test_dmn.py  test_dsl_validation.py  test_dynamic_fork_and_hibernate.py  test_engine_extensions.py  test_engine_fire.py  test_expr_evaluator.py  test_fault_injector.py  test_incremental_compiler.py  test_jtbd_propagation.py  test_ports_protocols.py  test_public_helper_contracts.py  test_replay.py  test_simulator.py  (+1 more)
python/flowforge-documents-s3/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-documents-s3/tests/: test_port.py
python/flowforge-fastapi/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-fastapi/tests/: conftest.py  test_dashboard.py  test_router_runtime.py  test_ws.py
python/flowforge-jtbd/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-jtbd-agritech/: README.md  pyproject.toml
python/flowforge-jtbd-agritech/tests/: test_smoke.py
python/flowforge-jtbd-banking/: README.md  pyproject.toml
python/flowforge-jtbd-banking/tests/: test_smoke.py
python/flowforge-jtbd-construction/: README.md  pyproject.toml
python/flowforge-jtbd-construction/tests/: test_smoke.py
python/flowforge-jtbd-corp-finance/: README.md  pyproject.toml
python/flowforge-jtbd-corp-finance/tests/: test_smoke.py
python/flowforge-jtbd-crm/: README.md  pyproject.toml
python/flowforge-jtbd-crm/tests/: test_smoke.py
python/flowforge-jtbd-ecom/: README.md  pyproject.toml
python/flowforge-jtbd-ecom/tests/: test_smoke.py
python/flowforge-jtbd-gaming/: README.md  pyproject.toml
python/flowforge-jtbd-gaming/tests/: test_smoke.py
python/flowforge-jtbd-healthcare/: README.md  pyproject.toml
python/flowforge-jtbd-healthcare/tests/: test_smoke.py
python/flowforge-jtbd-hub/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-jtbd-hub/tests/: test_E_73_rbac.py
python/flowforge-jtbd-insurance/: README.md  pyproject.toml
python/flowforge-jtbd-insurance/tests/: test_smoke.py
python/flowforge-jtbd-media/: README.md  pyproject.toml
python/flowforge-jtbd-media/tests/: test_smoke.py
python/flowforge-jtbd-nonprofit/: README.md  pyproject.toml
python/flowforge-jtbd-nonprofit/tests/: test_smoke.py
python/flowforge-jtbd-procurement/: README.md  pyproject.toml
python/flowforge-jtbd-procurement/tests/: test_smoke.py
python/flowforge-jtbd-realestate/: README.md  pyproject.toml
python/flowforge-jtbd-realestate/tests/: test_smoke.py
python/flowforge-jtbd-retail/: README.md  pyproject.toml
python/flowforge-jtbd-retail/tests/: test_smoke.py
python/flowforge-jtbd-telco/: README.md  pyproject.toml
python/flowforge-jtbd-telco/tests/: test_smoke.py
python/flowforge-jtbd/team-prompts/: registry.yaml
python/flowforge-jtbd/tests/: test_compliance_linter.py  test_compliance_schema.py  test_exporters.py  test_jtbd_audit.py  test_migrate.py  test_permissions.py  test_registry.py
python/flowforge-money/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-money/tests/: test_format.py  test_static.py
python/flowforge-notify-multichannel/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
python/flowforge-notify-multichannel/tests/: test_router.py  test_transports.py
python/flowforge-otel/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-otel/tests/: test_metrics_adapter.py  test_tracing_adapter.py  test_wiring.py
python/flowforge-outbox-pg/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-outbox-pg/tests/: test_registry.py  test_worker.py  test_worker_pool.py
python/flowforge-rbac-spicedb/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-rbac-spicedb/tests/: test_resolver.py
python/flowforge-rbac-static/: CHANGELOG.md  README.md  pyproject.toml
python/flowforge-rbac-static/tests/: test_resolver.py
(+1178 files in other folders)
