[project]
name = "flowforge-workspace"
version = "0.0.0"
description = "flowforge monorepo workspace root (not published)"
requires-python = ">=3.11"
dependencies = [
    "flowforge",
    "flowforge-fastapi",
    "flowforge-sqlalchemy",
    "flowforge-tenancy",
    "flowforge-audit-pg",
    "flowforge-outbox-pg",
    "flowforge-rbac-static",
    "flowforge-rbac-spicedb",
    "flowforge-documents-s3",
    "flowforge-money",
    "flowforge-signing-kms",
    "flowforge-notify-multichannel",
    "flowforge-cli",
]

[tool.uv.workspace]
members = [
    "python/flowforge-core",
    "python/flowforge-fastapi",
    "python/flowforge-sqlalchemy",
    "python/flowforge-tenancy",
    "python/flowforge-audit-pg",
    "python/flowforge-outbox-pg",
    "python/flowforge-rbac-static",
    "python/flowforge-rbac-spicedb",
    "python/flowforge-documents-s3",
    "python/flowforge-money",
    "python/flowforge-signing-kms",
    "python/flowforge-notify-multichannel",
    "python/flowforge-cli",
    "python/flowforge-jtbd",
    "python/flowforge-jtbd-hub",
]

[tool.uv.sources]
flowforge = { workspace = true }
flowforge-jtbd = { workspace = true }
flowforge-jtbd-hub = { workspace = true }
flowforge-fastapi = { workspace = true }
flowforge-sqlalchemy = { workspace = true }
flowforge-tenancy = { workspace = true }
flowforge-audit-pg = { workspace = true }
flowforge-outbox-pg = { workspace = true }
flowforge-rbac-static = { workspace = true }
flowforge-rbac-spicedb = { workspace = true }
flowforge-documents-s3 = { workspace = true }
flowforge-money = { workspace = true }
flowforge-signing-kms = { workspace = true }
flowforge-notify-multichannel = { workspace = true }
flowforge-cli = { workspace = true }

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
include = ["python/*/src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "boto3>=1.34",
    "moto[s3,kms]>=5.0",
    "anyio[trio]>=4.0",
    "z3-solver>=4.13",
]
