[project]
name = "flowforge-audit-pg"
version = "0.1.0"
description = "flowforge-audit-pg — PostgreSQL AuditSink with sha256 hash chain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flowforge",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.28"]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_audit_pg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
