[project]
name = "flowforge-cli"
version = "0.1.0"
description = "flowforge-cli — typer-based CLI for the flowforge framework (new, validate, simulate, regen-catalog, add-jtbd, migrate, ...)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"flowforge>=0.1.0",
	"typer>=0.12",
	"jinja2>=3.1",
	"pyyaml>=6.0",
	"jsonschema>=4.0",
]

[project.optional-dependencies]
# E-5 conflict solver — Z3 backend. Not a hard dep so hosts that
# can't ship Z3 (constrained runtimes, AOT-compiled bundles) still
# get the simple-pairs fallback.
lint = [
	"z3-solver>=4.13",
]
test = [
	"pytest>=7",
	"pytest-asyncio>=0.23",
	"z3-solver>=4.13",
]

[project.scripts]
flowforge = "flowforge_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_cli"]

[tool.hatch.build]
include = [
	"src/flowforge_cli/templates/**/*",
	"src/flowforge_cli/jtbd/templates/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src/flowforge_cli"]
reportMissingImports = "warning"
