[project]
name = "flowforge-cli"
version = "0.1.0"
description = "flowforge-cli — typer-based CLI for the flowforge framework (new, validate, simulate, regen-catalog, add-jtbd, migrate, ...)"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Nyimbi Odero, Datacraft", email = "nyimbi@gmail.com" }]
maintainers = [{ name = "Nyimbi Odero, Datacraft", email = "nyimbi@gmail.com" }]
keywords = ["workflow", "cli", "typer", "scaffolding"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Software Development :: Libraries",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: System :: Distributed Computing",
	"Framework :: AsyncIO",
	"Framework :: FastAPI",
	"Framework :: Pydantic",
	"Framework :: Pydantic :: 2",
	"Typing :: Typed",
]
# pypi-metadata-stamped

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"flowforge>=0.1.0",
	"flowforge-jtbd>=0.1.0",
	"typer>=0.12",
	"jinja2>=3.1",
	"pyyaml>=6.0",
	"jsonschema>=4.0",
]

[project.optional-dependencies]
# E-5 conflict solver — Z3 backend. Not a hard dep so hosts that
# can't ship Z3 (constrained runtimes, AOT-compiled bundles) still
# get the simple-pairs fallback.
lint = [
	"z3-solver>=4.13",
]
test = [
	"pytest>=7",
	"pytest-asyncio>=0.23",
	"z3-solver>=4.13",
]

[project.scripts]
flowforge = "flowforge_cli.main:app"

[project.urls]
Homepage = "https://github.com/nyimbi/ums"
Documentation = "https://github.com/nyimbi/ums/tree/main/framework/docs"
Repository = "https://github.com/nyimbi/ums"
Issues = "https://github.com/nyimbi/ums/issues"
Changelog = "https://github.com/nyimbi/ums/blob/main/framework/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_cli"]

[tool.hatch.build]
include = [
	"src/flowforge_cli/templates/**/*",
	"src/flowforge_cli/jtbd/templates/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src/flowforge_cli"]
reportMissingImports = "warning"
