[project]
name = "flowforge-cli"
version = "0.1.0"
description = "flowforge-cli — typer-based CLI for the flowforge framework (new, validate, simulate, regen-catalog, add-jtbd, migrate, ...)"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Nyimbi Odero, Datacraft", email = "nyimbi@gmail.com" }]
maintainers = [{ name = "Nyimbi Odero, Datacraft", email = "nyimbi@gmail.com" }]
keywords = ["workflow", "cli", "typer", "scaffolding"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Software Development :: Libraries",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: System :: Distributed Computing",
	"Framework :: AsyncIO",
	"Framework :: FastAPI",
	"Framework :: Pydantic",
	"Framework :: Pydantic :: 2",
	"Typing :: Typed",
]
# pypi-metadata-stamped

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"flowforge>=0.1.0",
	"flowforge-jtbd>=0.1.0",
	"typer>=0.12",
	"jinja2>=3.1",
	"pyyaml>=6.0",
	"jsonschema>=4.0",
	# v0.3.0 W4a / item 14 — Faker drives the per-bundle seed-data
	# generator's runtime. Pinned with an upper bound so the generated
	# seed modules' deterministic-seed contract stays stable across
	# patch upgrades; the generator emits ``Faker().seed_instance(N)``
	# at module load time so the runtime distribution of values is
	# byte-stable for a given Faker minor version.
	"faker>=25,<37",
	# v0.3.0 W4a / item 3 (ADR-003): the per-JTBD property suite emitted
	# by ``flowforge jtbd-generate`` imports ``hypothesis`` at test-run
	# time, so the CLI carries it as a runtime dep. The major-version
	# pin bounds cross-version shrink-behaviour drift, the dominant
	# remaining source of property-test non-determinism once the seed
	# is fixed at generation time.
	"hypothesis>=6.100,<7.0",
]

[project.optional-dependencies]
# E-5 conflict solver — Z3 backend. Not a hard dep so hosts that
# can't ship Z3 (constrained runtimes, AOT-compiled bundles) still
# get the simple-pairs fallback.
lint = [
	"z3-solver>=4.13",
]
test = [
	"pytest>=7",
	"pytest-asyncio>=0.23",
	"z3-solver>=4.13",
]
# v0.3.0 W4a / item 4 — guard-aware reachability checker.
#
# Per ADR-004 (docs/v0.3.0-engineering/adr/ADR-004-z3-solver-opt-in-extra.md),
# z3-solver is an opt-in runtime extra with a HARD version pin: SAT
# solvers are deterministic per-version but not stable across versions,
# so unpinned z3 produces different counter-examples for the same
# constraint and breaks byte-identical regen.
#
# Hosts opt in via:
#     pip install 'flowforge-cli[reachability]'
#     uv pip install 'flowforge-cli[reachability]'
#
# Without the extra, the per-JTBD reachability generator emits the
# documented placeholder file (workflows/<id>/reachability_skipped.txt)
# instead of running z3, so regen stays byte-stable either way.
reachability = [
	"z3-solver==4.13.4.0",
]
# v0.3.0 W4b / item 22 — opt-in LLM copy polish via sidecar (ADR-002).
#
# The ``flowforge polish-copy`` command runs an offline LLM pass over
# user-facing strings and emits a sidecar at <bundle>.overrides.json.
# The LLM is the ONLY LLM touchpoint in the entire generation pipeline;
# the rewrite is an authoring-time concern only — regen never invokes
# the LLM, CI never sees it. Without this extra installed, polish-copy
# degrades to a no-op echo (canonical strings round-trip unchanged) so
# the CLI stays importable and the byte-identical regen contract holds.
#
# Hosts opt in via:
#     pip install 'flowforge-cli[llm]'
#     uv pip install 'flowforge-cli[llm]'
llm = [
	"anthropic>=0.40",
]

[project.scripts]
flowforge = "flowforge_cli.main:app"

[project.urls]
Homepage = "https://github.com/nyimbi/ums"
Documentation = "https://github.com/nyimbi/ums/tree/main/framework/docs"
Repository = "https://github.com/nyimbi/ums"
Issues = "https://github.com/nyimbi/ums/issues"
Changelog = "https://github.com/nyimbi/ums/blob/main/framework/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_cli"]

[tool.hatch.build]
include = [
	"src/flowforge_cli/templates/**/*",
	"src/flowforge_cli/jtbd/templates/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src/flowforge_cli"]
reportMissingImports = "warning"
