[project]
name = "flowforge-connectors"
version = "0.1.0"
description = "Connector SDK and starter connectors for flowforge workflows"
requires-python = ">=3.11"
dependencies = ["flowforge>=0.1.0"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_connectors"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
