[project]
name = "flowforge"
version = "0.1.0"
description = "flowforge-core — DSL, compiler, two-phase engine, simulator, port ABCs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "jsonschema>=4.20",
    "python-dateutil>=2.8",
    "uuid6>=2024.7.10",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
