[project]
name = "flowforge-documents-s3"
version = "0.1.0"
description = "flowforge-documents-s3 — S3-backed DocumentPort adapter (with noop)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flowforge",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto[s3]>=5.0",
    "boto3>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_documents_s3"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
