[project]
name = "flowforge-fastapi"
version = "0.0.0"
description = "flowforge-fastapi — flowforge adapter (placeholder)"
requires-python = ">=3.11"
dependencies = ["flowforge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_fastapi"]
