[project]
name = "flowforge-fastapi"
version = "0.1.0"
description = "flowforge-fastapi — FastAPI HTTP/WS adapters wrapping the flowforge engine, designer, and runtime routers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"flowforge",
	"fastapi>=0.115",
	"starlette>=0.40",
	"pydantic>=2.5",
]

[project.optional-dependencies]
test = [
	"pytest>=7",
	"pytest-asyncio>=0.23",
	"httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_fastapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src/flowforge_fastapi"]
reportMissingImports = "warning"
