[project]
name = "flowforge-jtbd-corp-finance"
version = "1.0.0"
description = "flowforge JTBD domain library — Corporate Finance (Treasury, budget, forecast)"
requires-python = ">=3.11"
dependencies = [
    "flowforge-jtbd>=0.1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_jtbd_corp_finance"]
