[project]
name = "flowforge-jtbd-healthcare"
version = "1.0.0"
description = "flowforge JTBD domain library — Healthcare (Admissions, billing, clinical)"
requires-python = ">=3.11"
dependencies = [
    "flowforge-jtbd>=0.1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_jtbd_healthcare"]
