[project]
name = "flowforge-jtbd-hub"
version = "0.1.0"
description = "flowforge-jtbd-hub — public registry service for signed JTBD packages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flowforge",
    "flowforge-jtbd",
    "flowforge-signing-kms",
    "fastapi>=0.115",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_jtbd_hub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
