[project]
name = "flowforge-jtbd-insurance"
version = "1.0.0"
description = "flowforge JTBD domain library — Insurance (Claims, underwriting, reinsurance)"
requires-python = ">=3.11"
dependencies = [
    "flowforge-jtbd>=0.1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_jtbd_insurance"]
