[project]
name = "flowforge-jtbd-insurance"
version = "0.0.1"
description = "flowforge JTBD domain library — Insurance (Claims, underwriting, reinsurance)"
requires-python = ">=3.11"
dependencies = [
    "flowforge-jtbd>=0.1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_jtbd_insurance"]

[tool.uv]
# E-46 / F-5: domain library not yet reviewed/rebranded. Workspace registers
# this dir for build discovery, but uv treats it as a virtual member (no
# wheel is built or installed) until E-48a/E-48b flips this flag back to
# true after security + product review.
package = false
